fixing centering on mobile and stats table

--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,7 @@ td {
   text-align: center;
   font-size: 1.2rem;
   font-family: Helvetica;
-  outline: 2px solid black;
+  ouline: 2px solid black;
 }
 @media (max-width: 500px) {
   h1 {
